# qgroundcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  MajorUpdates.md  QGCCommon.pri  QGCPostLinkCommon.pri  README.md  package-lock.json  package.json  qgcimages.qrc  qgroundcontrol.pro  qgroundcontrol.qrc  qmlglsink.pri  videoreceiverapp.pro
.github/workflows/: android.yml  android_debug.yml  android_release.yml  docs_deploy.yml  linux.yml  linux_debug.yml  linux_release.yml  macos_debug.yml  macos_release.yml  videoapp_linux.yml  window_debug.yml  windows.yml  windows_release.yml
VideoReceiverApp/: CMakeLists.txt  main.qml
VideoReceiverApp/android/: init.cpp
cmake/: CompileOptions.cmake  CreateAppImage.cmake  QGCDeploy.cmake  Qt5QGCConfiguration.cmake
custom-example/: README.md  qgroundcontrol.qrc
deploy/docker/: Dockerfile  Dockerfile-build-linux  install-qt-linux.sh
deploy/installer/: README.md
deploy/jenkins/: Jenkinsfile
docs/en/: SUMMARY.md
libs/: CMakeLists.txt  README.md
libs/OpenSSL/: CMakeLists.txt
libs/libevents/: CMakeLists.txt
libs/qmlglsink/: CMakeLists.txt
libs/qtandroidserialport/: CMakeLists.txt
libs/qtandroidserialport/src/: qserialport.h  qserialport_android_p.h
libs/sdl2/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
src/: CMakeLists.txt  QGCApplication.cc  QGCFileDownload.cc  QGCPalette.h  QGCToolbox.cc  QGCToolbox.h  main.cc  test.qml
src/ADSB/: CMakeLists.txt
src/AirLink/: AirLinkManager.cc  AirLinkSettings.qml  CMakeLists.txt
src/AnalyzeView/: AnalyzePage.qml  CMakeLists.txt  GeoTagPage.qml  LogDownloadPage.qml  MAVLinkInspectorController.cc  MAVLinkInspectorController.h  MAVLinkInspectorPage.qml  MavlinkConsolePage.qml
src/Audio/: AudioOutput.cc  CMakeLists.txt
src/AutoPilotPlugins/: CMakeLists.txt
src/Camera/: CMakeLists.txt  MavlinkCameraControl.cc  MavlinkCameraControl.h  QGCCameraControl.cc  QGCCameraControl.h  QGCCameraIO.cc  QGCCameraIO.h  QGCCameraManager.cc  QGCCameraManager.h  SimulatedCameraControl.cc  SimulatedCameraControl.h  VehicleCameraControl.cc  VehicleCameraControl.h
src/Compression/: CMakeLists.txt
src/FactSystem/: CMakeLists.txt  Fact.cc  ParameterManager.cc  ParameterManager.h  SettingsFact.cc
src/FactSystem/FactControls/: AltitudeFactTextField.qml  CMakeLists.txt  FactBitmask.qml  FactCheckBoxSlider.qml  FactComboBox.qml  FactLabel.qml  FactPanelController.h  FactTextField.qml  FactTextFieldGrid.qml  FactTextFieldRow.qml  FactTextFieldSlider.qml  FactValueSlider.qml  LabelledFactComboBox.qml  LabelledFactSlider.qml  LabelledFactTextField.qml
src/FirmwarePlugin/: CMakeLists.txt  FirmwarePlugin.cc  FirmwarePlugin.h
src/FirstRunPromptDialogs/: CMakeLists.txt  FirstRunPrompt.qml  OfflineVehicleFirstRunPrompt.qml  UnitsFirstRunPrompt.qml
src/FlightDisplay/: CMakeLists.txt  DefaultChecklist.qml  FixedWingChecklist.qml  FlightDisplayViewDummy.qml  FlightDisplayViewUVC.qml  FlightDisplayViewVideo.qml  FlightDisplayViewWidgets.qml  FlyView.qml  FlyViewBottomRightRowLayout.qml  FlyViewInsetViewer.qml  FlyViewInstrumentPanel.qml  FlyViewMap.qml  FlyViewMissionCompleteDialog.qml  FlyViewPreFlightChecklistPopup.qml  FlyViewToolStrip.qml  FlyViewToolStripActionList.qml  FlyViewTopRightColumnLayout.qml  FlyViewVideo.qml  FlyViewWidgetLayer.qml  GripperMenu.qml  GuidedActionConfirm.qml  GuidedActionGripper.qml  GuidedActionList.qml  GuidedActionsController.qml  GuidedValueSlider.qml  MultiRotorChecklist.qml  MultiVehicleList.qml  ObstacleDistanceOverlay.qml  ObstacleDistanceOverlayMap.qml  ObstacleDistanceOverlayVideo.qml  PreFlightBatteryCheck.qml  PreFlightCheckList.qml  PreFlightGPSCheck.qml  PreFlightRCCheck.qml  PreFlightSensorsHealthCheck.qml  PreFlightSoundCheck.qml  ProximityRadarVideoView.qml  RoverChecklist.qml  SubChecklist.qml  TelemetryValuesBar.qml  (+4 more)
src/FlightMap/: CMakeLists.txt  FlightMap.qml  MapScale.qml
src/FollowMe/: CMakeLists.txt
src/GPS/: CMakeLists.txt  GPSManager.cc  GPSManager.h  GPSPositionMessage.h  RTCMMavlink.cc  sensor_gnss_relative.h
src/Geo/: CMakeLists.txt  Math.hpp
src/Joystick/: CMakeLists.txt  Joystick.cc  Joystick.h  JoystickAndroid.cc  JoystickAndroid.h  JoystickManager.cc  JoystickSDL.cc
src/MissionManager/: CMakeLists.txt  CorridorScanComplexItem.h  FixedWingLandingComplexItem.cc  FixedWingLandingComplexItem.h  GeoFenceController.cc  GeoFenceController.h  GeoFenceManager.h  LandingComplexItem.cc  LandingComplexItem.h  MapLineArrow.qml  MissionController.cc  MissionController.h  MissionSettingsItem.cc  MissionSettingsItem.h  PlanElementController.h  PlanManager.cc  PlanMasterController.h  QGCMapCircleVisuals.qml  QGCMapPolygonVisuals.qml  QGCMapPolylineVisuals.qml  RallyPointController.h  RallyPointManager.h  Section.h  StructureScanComplexItem.h  SurveyComplexItem.h  TransectStyleComplexItem.cc  TransectStyleComplexItem.h  VTOLLandingComplexItem.h  VisualMissionItem.h
src/PlanView/: CMakeLists.txt  FWLandingPatternMapVisual.qml  GeoFenceMapVisuals.qml  MissionItemEditor.qml  PlanToolBarIndicators.qml  PlanView.qml  SurveyItemEditor.qml  TakeoffItemMapVisual.qml  TransectStyleComplexItemEditor.qml  (+2 more)
src/PositionManager/: CMakeLists.txt  PositionManager.cpp  PositionManager.h  SimulatedPosition.cc
src/Terrain/: CMakeLists.txt  TerrainQuery.cc  TerrainQuery.h  TerrainTile.cc  TerrainTile.h
src/UTMSP/: CMakeLists.txt  UTMSPActivationStatusBar.qml  UTMSPAdapterEditor.qml  UTMSPAircraft.cpp  UTMSPFlightPlanManager.cpp  UTMSPFlightPlanManager.h  UTMSPLogger.h  UTMSPMapVisuals.qml  UTMSPNetworkRemoteIDManager.cpp  UTMSPRestInterface.cpp  UTMSPStateStorage.qml  UTMSPVehicle.cpp  utmsp.qrc
src/UTMSP/dummy/: qmldir
src/Utilities/: CMakeLists.txt  QGC.cc  QGCCachedFileDownload.h  SHPFileHelper.h
src/VideoManager/: CMakeLists.txt  SubtitleWriter.h  VideoManager.cc
src/VideoReceiver/: CMakeLists.txt  GStreamer.cc  GStreamer.h  GstVideoReceiver.cc  GstVideoReceiver.h  README.md  VideoReceiver.pri
src/api/: CMakeLists.txt  QGCCorePlugin.h
test/: CMakeLists.txt
translations/: qgc-json.ts  qgc-lupdate.sh  qgc_source_ko_KR.ts  qgc_source_tr_TR.ts
(+394 files in other folders)
